--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/graphql": "^10.0.21",
+    "@nestjs/jwt": "^9.0.0",
     "@nestjs/mongoose": "^9.2.0",
+    "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "apollo-server-express": "^3.10.1",
     "bcrypt": "^5.0.1",
@@ -35,6 +37,9 @@
     "graphql": "^16.5.0",
     "joi": "^17.6.0",
     "mongoose": "^6.5.2",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
